--- a/style.css
+++ b/style.css
@@ -50,15 +50,27 @@ header #nav-links #links {
 header #nav-links #links .link {
     list-style: none;
     padding: 3px 10px;
-    transition: 0.1s ease-in-out;
 }
 
 .link:hover {
     color: #fff;
     font-weight: 300;
     font-size: large;
+    transition: 0.1s ease-in-out;
 }
 
-/* styling the nav-bar-opener */
+/* styling the side nav-bar */
+#side-nav-opener {
+    height: 30px;
+    width: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    border: 3px solid var(--theme-color);
+    border-top: none;
+    border-radius: 0 0 10px 0;
+    line-height: 5px;
+    background-color: rgb(20, 20, 20);
+    color: var(--text-color)
+}
 
 
