--- a/style.css
+++ b/style.css
@@ -26,8 +26,21 @@ header {
     padding: 0 4%;
 }
 
+header #logo {
+    display: flex;
+    align-items: center;
+}
+
+header #logo #logo-title {
+    font-weight: 100;
+    font-size: 25px;
+}
+
 header #logo i {
     font-size: 30px;
+    margin-right: 15px;
+    position: relative;
+    bottom: 5px;
 }
 
 header #nav-links{
@@ -35,7 +48,7 @@ header #nav-links{
     align-items: center;
     height: 100%;
     width: 60%;
-    max-width: 500px;
+    max-width: 600px;
 }
 
 header #nav-links #links {
