--- a/style.css
+++ b/style.css
@@ -103,22 +103,26 @@ header #nav-links #links .link {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 #side-links {
     width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 #side-links .side-link {
     height: 60px;
     list-style: none;
-    position: relative;
-    left: -32px;
     display: flex;
+    position:relative;
+    left: -32px;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px 0 20px;
-    width: 100%;
+    width: calc(100% + 31px);
 }
 
 .side-link button {
@@ -154,4 +158,10 @@ header #nav-links #links .link {
 
 #btnCloseSideNav:hover {
     color: rgba(255, 255, 255, 0.744);
+}
+
+
+/* styling the hero section */
+#hero {
+    display: flex;
 }
